--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,4 +1,100 @@
-.try__2{
-    height: 500px;
-    background-color: #FFB8CA;
+.hero {
+  width: 100%;
+  height: 502px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--secondary-bg-color);
+  overflow: hidden;
+  @media screen and (min-width: 768px) {
+    height: 399px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    height: 665px;
+  }
+}
+.hero__container {
+  position: relative;
+}
+.hero-image__thumb {
+  background-color: var(--pre-title-color);
+  width: 346px;
+  height: 344px;
+  border-radius: 50%;
+  position: absolute;
+  top: 27px;
+  left: 36px;
+}
+.hero-image {
+  position: absolute;
+  top: 9px;
+  left: 81px;
+  height: 410px;
+}
+.hero__content {
+  position: absolute;
+  left: 20px;
+  top: 137px;
+}
+.hero__title {
+  margin-bottom: 19px;
+  width: 218px;
+  font-family: Titan One, sans-serif;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+
+  color: var(--secondary--title-color);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  &--accent {
+    font-size: 48px;
+    line-height: 0.96;
+
+    color: var(--accent-color);
+  }
+}
+.hero__list {
+  display: flex;
+}
+.hero__item {
+  &:not(:last-child) {
+    margin-right: 8px;
+  }
+}
+.hero__link {
+  height: 24px;
+
+  border-radius: 20px;
+  font-family: inherit;
+  font-size: 8px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &--products {
+    width: 61px;
+    background-color: var(--accent-color);
+    color: var(--btn-bg-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      background-color: var(--btn-bg-color);
+      color: var(--accent-color);
+    }
+  }
+  &--made {
+    width: 83px;
+    background-color: var(--btn-bg-color);
+    color: var(--accent-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      background-color: var(--accent-color);
+      color: var(--btn-bg-color);
+    }
+  }
 }
