--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,6 +1,13 @@
 .header {
   padding: 6px 0;
-  background-color: #ffb8ca;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9;
+  @media screen and (min-width: 768px) {
+    top: 37px;
+  }
 }
 .header__container {
   display: flex;
