--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -38,5 +38,7 @@
     --svg-hover-bg-color: #D41443;
     --border-footer: #E1E1E1;
 
+    --border-menu: #E18298;
+
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  }
