--- a/src/partials/mobi-menu.html
+++ b/src/partials/mobi-menu.html
@@ -1,6 +1,6 @@
    
     <button type="button" class="menu-open js-open-menu" aria-controls="mobile-menu" data-menu-button>
-        <svg width="20" height="12">
+        <svg width="50" height="30">
             <use class="menu-button__icon-menu" href="./images/sprite.svg#icon-menu_40px"></use>
         </svg>
     </button>
@@ -8,8 +8,8 @@
         <div class="menu-container js-menu-container" id="mobile-menu">
         
             <button class="menu-close js-close-menu">
-                <svg class="menu-button__icon-cross" width="13.5" height="14">
-                    <use  href="./images/sprite.svg#icon-close"></use>
+                <svg class="menu-button__icon-cross" width="14" height="14">
+                    <use  href="./images/sprite.svg#icon-close-black-18dp-2-1-1"></use>
                 </svg>
             </button>
         
@@ -39,6 +39,7 @@
             </div>
         </div>
     </div>
+    <!--<script defer src="/menu.js"></script>-->
 
 
     
