--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -6,7 +6,7 @@
             <picture>
                 <!-- <source srcset="../images/desktop/display-x1/desktop-mukalo-x1.png 1x, ../images/desktop/display-x2/desktop-mukalo-x2.png 2x,  "
                     media="(min-width:1200px)"> -->
-                <source srcset="../"   media="(min-width:768px)">                    
+                <!-- <source srcset="../"   media="(min-width:768px)">                     -->
                 <source srcset="./images/mobile/Display-x1/mobi-mukalo-x1.png 1x, ./images/mobile/Display-x2/mobi-mukalo-x2.png 2x" media="(min-width:320px)">
                 <img class="about__image-cow" src="./images/mobile/Display-x1/mobi-mukalo-x1.png " alt="коровка">
             </picture>
@@ -27,11 +27,11 @@
             </div>
         </div>
     </div>
-    <div class="modal3">
+    <!--<div class="modal3">
         <button type="button" class="modal3__btn-close" data-modal-close>
-            <!-- <svg class="modal3__btn-close-icon" width="11" height="11">
+             <svg class="modal3__btn-close-icon" width="11" height="11">
                 <use href="./images/icons.svg#icon-vector"></use>
-            </svg> -->
+            </svg>
         </button>
         <b class="modal3__title">Преимущества нашей продукции</b>
         <p  class="modal3__text"> Главное преимущество употребления молочных продуктов — это их способность благотворно влиять на микрофлору кишечника.
@@ -43,13 +43,13 @@
                 <label for="input-tel" class="modal-form-field__label">Телефон</label>
                 <span class="input-wrapper">
                     <input type="tel" name="modal-tel" id="input-tel" class="modal-form-field__input" placeholder=>
-                    <!-- <svg class="modal-form-field__icon" width="13" height="12">
+                     <svg class="modal-form-field__icon" width="13" height="12">
                         <use href="./images/icons.svg#icon-tel"></use>
-                    </svg> -->
+                    </svg> 
                 </span>
             </div>           
             
                         <button type="submit" class="form-btn">Обратный звонок</button>
         </form>
-    </div>
+    </div>-->
 </section>
