--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -138,11 +138,11 @@
   color: var(--main-text-color);
   text-align: center;
 }
-.modal3__text {
-  font-family: DM Sans;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.58;
-  color: var(--third-text-color);
-}
+// .modal3__text {
+//   font-family: DM Sans;
+//   font-style: normal;
+//   font-weight: 500;
+//   font-size: 12px;
+//   line-height: 1.58;
+//   color: var(--third-text-color);
+// }
