--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -4,9 +4,9 @@
         <h2 class="about__title" >how it's made?</h2>
         <div class="about_card">
             <picture>
-                <!-- <source srcset="../images/desktop/display-x1/desktop-mukalo-x1.png 1x, ../images/desktop/display-x2/desktop-mukalo-x2.png 2x,  "
+                <!-- <source srcset="./images/desktop/display-x1/desktop-mukalo-x1.png 1x, ./images/desktop/display-x2/desktop-mukalo-x2.png 2x,  "
                     media="(min-width:1200px)"> -->
-                <source srcset="../"   media="(min-width:768px)">                    
+                <source srcset="./images/desktop/display-x1/desktop-mukalo-x1.png 1x, ./images/desktop/display-x2/desktop-mukalo-x2.png 2x" media="(min-width:768px)">                    
                 <source srcset="./images/mobile/Display-x1/mobi-mukalo-x1.png 1x, ./images/mobile/Display-x2/mobi-mukalo-x2.png 2x" media="(min-width:320px)">
                 <img class="about__image-cow" src="./images/mobile/Display-x1/mobi-mukalo-x1.png " alt="коровка">
             </picture>
