--- a/src/sass/_mobi-menu.scss
+++ b/src/sass/_mobi-menu.scss
@@ -1,6 +1,4 @@
-.menu-container__wrap {
-  position: relative;
-}
+
 
 .menu-container {
   background-color: var(--mobile-menu-bg-color);
@@ -8,13 +6,13 @@
   width: 100vw;
   width: -webkit-fill-available;
   height: 100vh;
-  /*display: none;*/
-
-  /*transform: translateX(100%);
-  transition: transform 250ms var(--timing-function);*/
+  display: none;
+  top: 0;
+  transform: translateX(100%);
+  transition: transform 2000ms var(--timing-function);
   &.is-open {
     display: block;
-    /*transform: translateX(0);*/
+    transform: translateX(0);
   }
   &.is-hidden {
     visibility: hidden;
@@ -27,9 +25,9 @@
   &.is-hidden .menu-button__icon-cross {
     display: none;
   }
-  @media screen and(min-width: 768px) {
+  @media screen and(min-width: 480px) {
     width: 30%;
-    top: 0;
+    // top: 0;
     left: 70%;
   }
 }
