--- a/src/sass/_mobi-menu.scss
+++ b/src/sass/_mobi-menu.scss
@@ -1,5 +1,3 @@
-
-
 .menu-container {
   background-color: var(--mobile-menu-bg-color);
   position: absolute;
@@ -26,8 +24,8 @@
     display: none;
   }
   @media screen and(min-width: 480px) {
-    width: 30%;
-    top: 0;
+    width: 34%;
+    top: -37px;
     left: 70%;
   }
 }
