--- a/src/partials/mobi-menu.html
+++ b/src/partials/mobi-menu.html
@@ -3,15 +3,15 @@
   
         <div class="menu-container js-menu-container" id="mobile-menu ">
         
-            <button class="menu-close js-close-menu">
+            <button class="menu-container__close-button menu-close js-close-menu">
                 <svg class="menu-button__icon-cross" width="14" height="14">
                     <use  href="./images/sprite.svg#icon-close-black-18dp-2-1-1"></use>
                 </svg>
             </button>
         
             <button type="button" data-modal-open class="menu-container__menu-button">Buy now
-                <svg class="menu-container__menu-button-icon" width="5.26" height="8">
-                    <use href="./images/sprite.svg#icon-arrow-right"></use>
+                <svg class="menu-container__menu-button-icon" width="5" height="8">
+                    <use href="./images/sprite.svg#icon-next2"></use>
                 </svg>
             </button>
             <div>
