--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,7 +28,7 @@
         <use href="./images/sprite.svg#icon-menu_40px"></use>
       </svg>
     </button>
-    <button class="button header__button" type="button" data-modal-open>
+    <button class="button header__button" type="button" data-mainmodal-open>
       Buy now
       <svg class="btn__icon" width="4" height="8">
         <use href="./images/sprite.svg#icon-next"></use>
