--- a/src/partials/mobi-menu.html
+++ b/src/partials/mobi-menu.html
@@ -9,7 +9,7 @@
                 </svg>
             </button>
         
-            <button type="button" data-modal-open class="menu-container__menu-button">Buy now
+            <button type="button" data-mainmodal-open class="menu-container__menu-button">Buy now
                 <svg class="menu-container__menu-button-icon" width="5.26" height="8">
                     <use href="./images/sprite.svg#icon-arrow-right"></use>
                 </svg>
