--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -41,4 +41,17 @@
     --border-menu: #E18298;
 
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+     /** main-modal ******************************/
+        --accent-color-mod: #abc589;
+        --backdrop-background: rgba(255, 0, 0, 0.151);
+        --background-label:  rgba(47, 48, 58, 0.8);
+        --border-button: rgba(73, 19, 3, 0.8);
+        --background-main-modal: #FFFFFF;
+        --box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        --mn-modal-border-btn-close: 1px solid rgba(189, 0, 0, 0.2);
+        --mn-modal-label-text: rgba(145, 0, 0, 0.698);
+        --mn-modal-modal-bordr-inp:  rgba(145, 0, 0, 0.698);
+        --mn-modal-border-input: 1px solid rgba(145, 0, 0, 0.212);
+
  }
