--- a/src/sass/_mobi-menu.scss
+++ b/src/sass/_mobi-menu.scss
@@ -1,22 +1,27 @@
 .menu-container {
   background-color: var(--mobile-menu-bg-color);
-  position: absolute;
+  position: fixed;
   width: 100vw;
   width: -webkit-fill-available;
   height: 100vh;
-  display: none;
+  opacity: 0;
+  visibility: visible;
   top: 0;
-  transform: translateX(100%);
+
+  transform: translatex(100%);
   transition: transform 500ms var(--timing-function);
+
   &.is-open {
-    display: block;
-    transform: translateX(0);
-    transition: transform 500ms var(--timing-function);
+    opacity: 1;
+    transform: translatex(0%);
+    visibility: visible;
   }
   &.is-hidden {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
+
+    overflow: hidden;
   }
   &.is-open .menu-button__icon-menu {
     display: block;
@@ -32,7 +37,7 @@
   }
   @media screen and(min-width: 768px) {
     width: 35%;
-    top: -37px;
+    top: 0px;
     left: 65%;
     height: 100vh;
   }
