--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -27,8 +27,12 @@
     left: 36px;
   }
 
-  @media screen and (min-width: 417px) {
+  @media screen and (min-width: 418px) {
     right: 36px;
+  }
+  @media screen and (min-width: 768px) {
+    top: 31px;
+    right: 141px;
   }
 }
 .hero-image {
@@ -36,11 +40,20 @@
   top: 9px;
   left: 81px;
   height: 410px;
+  @media screen and (min-width: 768px) {
+    top: 32px;
+    left: 71px;
+    height: 336px;
+  }
 }
 .hero__content {
   position: absolute;
   left: 20px;
   top: 137px;
+  @media screen and (min-width: 768px) {
+    top: 102px;
+    left: 34px;
+  }
 }
 .hero__title {
   margin-bottom: 19px;
@@ -57,8 +70,18 @@
   &--accent {
     font-size: 48px;
     line-height: 0.96;
-
     color: var(--accent-color);
+    @media screen and (min-width: 768px) {
+      font-size: 34px;
+      line-height: 0.91;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 22px;
+    line-height: 1.14;
+    text-shadow: none;
+    width: 162px;
+    margin-bottom: 20px;
   }
 }
 .hero__list {
@@ -87,7 +110,7 @@
       color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
-      background-color: var(--btn-bg-color);
+      background-color: var(--icons-bg-hover-color);
       color: var(--accent-color);
     }
   }
@@ -99,8 +122,90 @@
       color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
-      background-color: var(--accent-color);
-      color: var(--btn-bg-color);
+      background-color: var(--icons-bg-hover-color);
+      color: var(--accent-color);
     }
   }
+}
+.hero-info {
+  display: none;
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    top: 245px;
+    left: 34px;
+    display: flex;
+    height: 126px;
+  }
+}
+
+.hero-info__description {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-bottom: 6px;
+}
+.hero-info__text {
+  width: 114px;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 8px;
+  line-height: 1.5;
+  color: var(--btn-bg-color);
+  margin-bottom: 7px;
+}
+.hero-info__link {
+  width: 18px;
+  height: 18px;
+  border-radius: 20px;
+  background-color: var(--btn-bg-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--accent-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus,
+  &:hover {
+    background-color: var(--accent-color);
+    color: var(--btn-bg-color);
+  }
+}
+.hero-info__icon {
+  fill: currentColor;
+}
+.hero-counter {
+  position: absolute;
+  top: 94px;
+  right: 34px;
+  text-align: right;
+}
+.hero-counter__first {
+  margin-bottom: 15px;
+}
+.hero-counter__second {
+  margin-bottom: 72px;
+}
+.hero-counter__number {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 1.14;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  text-align: right;
+  &--cafes {
+    color: var(--btn-bg-color);
+  }
+  &--trucks {
+    color: var(--accent-color);
+  }
+}
+.hero-counter__text {
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 1.25;
+  text-align: right;
+
+  color: var(--btn-bg-color);
 }
