Виправляю баг картинки героя на таблетці

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -27,12 +27,7 @@
           media="(min-width: 1200px)"
           type="image/png"
         />
-        <img
-          src="./images/mobile/Display-x1/mobi-hero-x1.png"
-          width="170"
-          height="410"
-          alt="мороженое"
-        />
+        <img src="./images/mobile/Display-x1/mobi-hero-x1.png" width="170" alt="мороженое" />
       </picture>
     </div>
     <div class="hero__content">
