--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -2,29 +2,31 @@
     <p class="products__text">100% natural</p>
     <h2 class="products__heading">products</h2>
     <ul class="products-list">
-        <li class="products-list__products-item products-list__products-item--color">
+        <li id="card001" class="products-list__products-item products-list__products-item--color _anim-transform">
          
             <!--<picture>-->
                 
-                <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream1-x1.png" width="249" height="252" alt="галерея" class="gallery-main-img">
+            <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream1-x1.png" width="249" height="252" alt="галерея" class="gallery-main-img">
             <!--</picture>-->
+            
+            <h3 class="products-list__heading">ice cream</h3>
+            <span class="products-list__horizontal-scrolling">
+                <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
+                    <use href="./images/sprite.svg#icon-points-2"></use>
+                </svg>
+            </span>
+            <p class="products-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
+            aliqua facilisis.</p>
+            
+            <a href="#card002" class="products-list__button">
+                <svg class="products-list__button-icon" width="10" height="10">
+                    <use href="./images/sprite.svg#icon-arrow-right"></use>
+                </svg>
+            </a>
                 
-                    <h3 class="products-list__heading">ice cream</h3>
-                    <span class="products-list__horizontal-scrolling">
-                        <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
-                            <use href="./images/sprite.svg#icon-points-2"></use>
-                        </svg>
-                    </span>
-                    <p class="products-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
-                    aliqua facilisis.</p>
-                    <button type="button" class="products-list__button">
-                        <svg class="products-list__button-icon" width="10" height="10">
-                            <use href="./images/sprite.svg#icon-arrow-right"></use>
-                        </svg>
-                    </button>
                 
         </li>
-        <li class="products-list__products-item products-list__products-item--color">
+        <li id="card002" class="products-list__products-item products-list__products-item--color _anim-transform">
             
                 <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream2-x1.png" width="249" height="252" alt="ice cream"/>
             
@@ -38,13 +40,13 @@
             </span>
             <p class="products-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
             aliqua facilisis.</p>
-            <button type="button" class="products-list__button">
+            <a href="#card003" class="products-list__button">
                 <svg class="products-list__button-icon" width="10" height="10">
                     <use href="./images/sprite.svg#icon-arrow-right"></use>
                 </svg>
-            </button>
+            </a>
         </li>
-        <li class="products-list__products-item products-list__products-item--color">
+        <li id="card003" class="products-list__products-item products-list__products-item--color _anim-transform">
             
                 <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream3-x1.png" width="249" height="252" alt="ice cream"/>
             </div> 
@@ -56,11 +58,11 @@
             </span>
             <p class="products-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
             aliqua facilisis.</p>
-            <button type="button" class="products-list__button">
+            <a href="#card001" class="products-list__button">
                 <svg class="products-list__button-icon" width="10" height="10">
                     <use href="./images/sprite.svg#icon-arrow-right"></use>
                 </svg>
-            </button>
+            </a>
         </li>
     </ul>
 </section>
