--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -107,6 +107,7 @@
 }
 
 .products-list__button {
+  background-color: var(--customer-bg-color);
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -115,4 +116,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+._anim-transform{
+  opacity: 0.2;
+  transform: rotateY(-100deg);
+  transition-property: transform, opacity;
+  transition-duration: 500ms;
+}
+._bomba{
+  opacity: 1;
+  transform: rotateY(0deg);
 }
