--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products">
+<section class="products container">
     <p class="products__text">100% natural</p>
     <h2 class="products__heading">products</h2>
     <ul class="products-list">
