--- a/src/sass/_modal-footer.scss
+++ b/src/sass/_modal-footer.scss
@@ -1,9 +1,11 @@
 .call-back{
     margin-bottom: 12px;
     margin-right: 5%;
-    font-family: 'DM Sans';
+    font-family: Titan One;
     font-style: normal;
-    font-weight: 700;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 1.13;
     font-size: 20px;
     line-height: 23px;
     text-align: center;
