--- a/src/sass/_modal-location.scss
+++ b/src/sass/_modal-location.scss
@@ -1,5 +1,6 @@
 
 .modal{
+    z-index: 10;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -68,4 +69,5 @@ body.scroll{
     line-height: 1.13;
     color: var(--main-title-color);
     margin-bottom: 30px;
+    margin-right: 5%;
 }
