--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -36,13 +36,6 @@
   width: 280px;
   height: 485px;
   border-radius: 24px;
-  @media screen and (min-width: 768px) {
-    margin: 0px 20px;
-  }
-  @media screen and (min-width: 1200px) {
-    margin: 0px 25px;
-  }
-
   &::before {
     position: absolute;
     content: '';
@@ -56,6 +49,14 @@
     @media screen and (min-width: 768px) {
       margin-bottom: 0px;
     }
+  }
+}
+.products-list__products-item+.products-list__products-item{
+  @media screen and (min-width: 768px) {
+    margin-left: 20px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 24px;
   }
 }
 .products-list__products-item--color {
