--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -18,11 +18,11 @@
             <p class="products-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
             aliqua facilisis.</p>
             
-            <a href="#card002" class="products-list__button">
+            <!-- <a href="#card002" class="products-list__button">
                 <svg class="products-list__button-icon" width="10" height="10">
                     <use href="./images/sprite.svg#icon-arrow-right"></use>
                 </svg>
-            </a>
+            </a> -->
                 
                 
         </li>
@@ -40,11 +40,11 @@
             </span>
             <p class="products-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
             aliqua facilisis.</p>
-            <a href="#card003" class="products-list__button">
+            <!-- <a href="#card003" class="products-list__button">
                 <svg class="products-list__button-icon" width="10" height="10">
                     <use href="./images/sprite.svg#icon-arrow-right"></use>
                 </svg>
-            </a>
+            </a> -->
         </li>
         <li id="card003" class="products-list__products-item products-list__products-item--color _anim-transform">
             
@@ -58,11 +58,11 @@
             </span>
             <p class="products-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
             aliqua facilisis.</p>
-            <a href="#card001" class="products-list__button">
+            <!-- <a href="#card001" class="products-list__button">
                 <svg class="products-list__button-icon" width="10" height="10">
                     <use href="./images/sprite.svg#icon-arrow-right"></use>
                 </svg>
-            </a>
+            </a> -->
         </li>
     </ul>
 </section>
