--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -101,6 +101,7 @@
   text-align: center;
   @media screen and (min-width: 768px) {
     flex-direction: row;
+    justify-content: center;
   }
 }
 
