--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -74,6 +74,7 @@
     
     border-radius: 50%;
     color:  var(--svg-bg-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,&:focus{
        color: var(--svg-hover-bg-color);
         
@@ -99,6 +100,10 @@
     font-size: 12px;
     line-height: 186%;
     color: var(--svg-secondary-fill);
+    &:hover,&:focus{
+        color: var(--third-text-color);
+         }
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);     
     @media screen and (min-width: 768px) {
         font-size: 14px;
     }
