--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -77,9 +77,9 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,&:focus{
        color: var(--svg-hover-bg-color);
-        
-    }
-}
+       }
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
 .footer__tel{
     font-family: DM Sans, Sans Serif;
     font-style: normal;
