--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -84,12 +84,12 @@
         <div class="contacts-btn" >
             <button class="locations-btn" type="button" data-location-open>Our Locations
                 <svg class="btn-icon" width="4" height="8">
-                    <use href="./images/sprite.svg#icon-arrow-right"></use>
+                    <use href="./images/sprite.svg#icon-next"></use>
                 </svg>
             </button>
             <button class="franchise-btn" type="button" data-footermodal-open>Franchise
                 <svg class="btn-icons" width="4" height="8">
-                    <use href="./images/sprite.svg#icon-arrow-right"></use>
+                    <use href="./images/sprite.svg#icon-next"></use>
                 </svg>
             </button>
         </div>
