--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -2,11 +2,20 @@
   visibility: hidden;
 }
 .contacts {
-  background-color: linear-gradient(#fff 4%, #fff5f6 0 100%);
+  background: linear-gradient(to top, var(--main-bg-color) 92%, var(--secondary--title-color) 0%);
 }
+
 @media screen and (min-width: 768px) {
   .contacts {
-    background-color: linear-gradient(#fff 11%, #fff5f6 0 100%);
+    background: linear-gradient(to top, var(--main-bg-color) 86%, var(--secondary--title-color) 0%);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts {
+    background-image: url(/);
+    background-size: contain;
+    background-position: 50%;
+    background-repeat: no-repeat;
   }
 }
 .contacts-list {
@@ -38,6 +47,11 @@
 @media screen and (min-width: 320px) {
   .contacts-list_card:not(:last-child) {
     margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 319px) {
+  .contacts-list_card {
+    padding: 10px 20px;
   }
 }
 @media screen and (min-width: 320px) {
