--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -7,7 +7,7 @@
     background: linear-gradient(to top, var(--main-bg-color) 86%, var(--secondary--title-color) 0%);
   }
   @media screen and (min-width: 1200px) {
-    background-image: url(/src/images/desktop/display-x1/desktop-contacts-x1.png);
+    background-image: url(../images/desktop/display-x1/desktop-contacts-x1.png);
     background-size: contain;
     background-position: 50%;
     background-repeat: no-repeat;
@@ -15,7 +15,7 @@
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    background-image: url(/src/images/desktop/display-x2/desktop-contacts-x2.png);
+    background-image: url(../images/desktop/display-x2/desktop-contacts-x2.png);
   }
 }
 
