--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -48,27 +48,17 @@
     <div class="hero-info">
       <picture class="hero-info__image">
         <source
-          srcset="
-            ./images/tablet/display-x1/tablet-milk-x1.png 1x,
-            ./images/tablet/display-2x/tablet-milk-x2.png 2x
-          "
-          media="(max-width: 1199px)"
-          type="image/png"
-        />
+          srcset="./images/tablet/display-x1/tablet-milk-x1.png 1x, ./images/tablet/display-2x/tablet-milk-x2.png 2x" media="(max-width: 1199px)"
+          type="image/png"/>
         <source
-          srcset="
-            ./images/desktop/display-x1/desktop-milk-x1.png 1x,
-            ./images/desktop/display-x2/desktop-milk-x2.png 2x
-          "
+          srcset="./images/desktop/display-x1/desktop-milk-x1.png 1x, ./images/desktop/display-x2/desktop-milk-x2.png 2x"
           media="(min-width: 1200px)"
-          type="image/png"
-        />
+          type="image/png"/>
         <img
-          src="./images/tablet/Display-x1/tablet-milk-x1.png"
+          src="./images/tablet/display-x1/tablet-milk-x1.png"
           width="124"
           height="126"
-          alt="молоко"
-        />
+          alt="молоко"/>
       </picture>
       <div class="hero-info__description">
         <p class="hero-info__text">
