Хедер десктоп герой десктоп
Виправила баги з картинками
Хедер на десктоп

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -27,7 +27,12 @@
           media="(min-width: 1200px)"
           type="image/png"
         />
-        <img src="./images/mobile/Display-x1/mobi-hero-x1.png" width="170" alt="мороженое" />
+        <img
+          class="hero-image__item"
+          src="./images/mobile/Display-x1/mobi-hero-x1.png"
+          width="170"
+          alt="мороженое"
+        />
       </picture>
     </div>
     <div class="hero__content">
@@ -48,17 +53,27 @@
     <div class="hero-info">
       <picture class="hero-info__image">
         <source
-          srcset="./images/tablet/display-x1/tablet-milk-x1.png 1x, ./images/tablet/display-2x/tablet-milk-x2.png 2x" media="(max-width: 1199px)"
-          type="image/png"/>
+          srcset="
+            ./images/tablet/display-x1/tablet-milk-x1.png 1x,
+            ./images/tablet/display-2x/tablet-milk-x2.png 2x
+          "
+          media="(max-width: 1199px)"
+          type="image/png"
+        />
         <source
-          srcset="./images/desktop/display-x1/desktop-milk-x1.png 1x, ./images/desktop/display-x2/desktop-milk-x2.png 2x"
+          srcset="
+            ./images/desktop/display-x1/desktop-milk-x1.png 1x,
+            ./images/desktop/display-x2/desktop-milk-x2.png 2x
+          "
           media="(min-width: 1200px)"
-          type="image/png"/>
+          type="image/png"
+        />
         <img
           src="./images/tablet/display-x1/tablet-milk-x1.png"
           width="124"
           height="126"
-          alt="молоко"/>
+          alt="молоко"
+        />
       </picture>
       <div class="hero-info__description">
         <p class="hero-info__text">
@@ -72,7 +87,6 @@
         </a>
       </div>
     </div>
-
     <div class="hero-counter">
       <div class="hero-counter__first">
         <p class="hero-counter__number hero-counter__number--cafes">16</p>
@@ -82,30 +96,30 @@
         <p class="hero-counter__number hero-counter__number--trucks">23</p>
         <p class="hero-counter__text hero-counter__text--trucks">food trucks</p>
       </div>
-      <picture class="hero-counter__image">
-        <source
-          srcset="
-            ./images/tablet/display-x1/tablet-girl-x1.png 1x,
-            ./images/tablet/display-2x/tablet-girl-x2.png 2x
-          "
-          media="(max-width: 1199px)"
-          type="image/png"
-        />
-        <source
-          srcset="
-            ./images/desktop/display-x1/desktop-girl-x1.png 1x,
-            ./images/desktop/display-x2/desktop-girl-x2.png 2x
-          "
-          media="(min-width: 1200px)"
-          type="image/png"
-        />
-        <img
-          src="./images/tablet/display-x1/tablet-girl-x1.png"
-          width="168"
-          height="133"
-          alt="девушка"
-        />
-      </picture>
     </div>
+    <picture class="hero-counter__image">
+      <source
+        srcset="
+          ./images/tablet/display-x1/tablet-girl-x1.png 1x,
+          ./images/tablet/display-2x/tablet-girl-x2.png 2x
+        "
+        media="(max-width: 1199px)"
+        type="image/png"
+      />
+      <source
+        srcset="
+          ./images/desktop/display-x1/desktop-girl-x1.png 1x,
+          ./images/desktop/display-x2/desktop-girl-x2.png 2x
+        "
+        media="(min-width: 1200px)"
+        type="image/png"
+      />
+      <img
+        src="./images/tablet/display-x1/tablet-girl-x1.png"
+        width="168"
+        height="133"
+        alt="девушка"
+      />
+    </picture>
   </div>
 </section>
