--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -5,20 +5,31 @@
   left: 0;
   width: 100%;
   z-index: 9;
+
   @media screen and (min-width: 768px) {
     top: 37px;
+    padding: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
   }
 }
 .header__container {
   display: flex;
   align-items: center;
+  @media screen and (min-width: 1200px) {
+    padding-left: 0;
+    padding-right: 0;
+    margin: 0;
+  }
 }
 .header-nav {
   display: none;
-  //   @media screen and (min-width: 1200px) {
-  //     display: flex;
-  //     margin-left: 110px;
-  //   }
+  @media screen and (min-width: 1200px) {
+    display: block;
+    margin-left: 110px;
+  }
 }
 .header-list {
   display: flex;
@@ -33,8 +44,6 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 21px;
-  display: flex;
-  align-items: center;
   color: var(--secondary--title-color);
 }
 .header__button {
@@ -80,6 +89,8 @@
   cursor: pointer;
   color: var(--main-title-color);
   margin-left: auto;
+  // падинг для доступности щоб збільшити площу для кліку
+  padding: 7px 0;
   @media screen and (min-width: 1200px) {
     display: none;
   }
