--- a/src/partials/modal-footer.html
+++ b/src/partials/modal-footer.html
@@ -8,17 +8,22 @@
 
 <form class="form-modak">
     <p class="call-back">Become our partner</p>
-    <label class="modal-lable">Name
-        <input class="input-style" type="text" name="name">  
-    </label>
+    <div class="form-modak_content">
+        <label class="modal-lable">Name
+            <input class="input-style" type="text" name="name" placeholder="Name*" required minlength="4">  
+        </label>
+        <label  class="modal-lable">Surname
+            <input class="input-style" type="text" name="Surname" placeholder="Surname*" required minlength="4">    
+        </label>
+    </div>
     <label  class="modal-lable">Tel
-        <input class="input-style" type="text" name="tel">
+        <input class="input-style" type="text" name="tel" placeholder="Tel*" required minlength="4" pattern="^(\s*)?(\+)?([- _():=+]?\d[- _():=+]?){10,14}(\s*)?$">
     </label>
     <label  class="modal-lable">Email
-        <input class="input-style" type="text" name="email">
+        <input class="input-style" type="text" name="email" placeholder="Email" required minlength="4">
     </label>
 
-    <label for="coments" class="modal-lable">Coments 
+    <label for="coments" class="modal-lable" required minlength="4">Coments 
         <textarea id="coments" class="form-coments" name="coments" placeholder="Enter text"></textarea></label>
          <button class="franchise-btn footer-btn" type="button">Send latter</button>
 </form>
